[gd_scene load_steps=3 format=3 uid="uid://blko7rgs3d4bo"]

[ext_resource type="Script" uid="uid://cyrj62w8fm82o" path="res://scripts/ui/main_menu.gd" id="1_main_menu_script"]
[ext_resource type="PackedScene" path="res://scenes/ui/settings_menu.tscn" id="2_settings_menu_scene"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu_script")

[node name="MainPanel" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MainPanel"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="SettingsPanel" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsContent" parent="SettingsPanel" instance=ExtResource("2_settings_menu_scene")]
